--- a/trunk/uhidd/uhidd.8
+++ b/trunk/uhidd/uhidd.8
@@ -33,7 +33,7 @@
 .Sh SYNOPSIS
 .Nm
 .Op Fl c Ar file
-.Op Fl dhkKmMuv
+.Op Fl dhkKmMsuv
 .Ar /dev/ugen%u.%u
 .Sh DESCRIPTION
 The
@@ -53,13 +53,13 @@ endpoint and pass it to the right HID child device.  The child device
 then process the data as approriate.
 .Pp
 There are currently 3 kinds of HID child devices: Mouse device, Keyboard
-device, and General HID device. The Mouse child device pass the mouse
+device, and Generic HID device. The Mouse child device pass the mouse
 data to the console driver to make it available to the text console
 and user programs. The Keyboard child device create a
 .Xr vkbd 4
 virtual keyboard and pass the keyboard scancodes to it.
-All other HID devices fall into the category of General HID device.
-The General HID child device creates a virtual USB HID device using
+All other HID devices fall into the category of Generic HID device.
+The Generic HID child device creates a virtual USB HID device using
 the
 .Xr uvhid 4
 driver, so normal usb hid applications that deal with
@@ -77,7 +77,7 @@ is /usr/local/etc/uhidd.conf
 Do not detach from the controlling terminal, i.e., run in
 foreground. This option is intended for debugging the daemon.
 .It Fl h
-Attach General HID child device. (This is the default behaviour)
+Attach Generic HID child device.
 This option requires that uvhid(4) driver compiled in the kernel
 or loaded as a kernel module.
 .It Fl k
@@ -85,7 +85,7 @@ Attach Keyboard HID child device. The option requires that
 .Xr vkbd 4
 compiled in the kernel or loaded as a kernel module.
 .It Fl K
-Attach Keyboard as a General HID child device. If this options
+Attach Keyboard as a Generic HID child device. If this options
 is spcified, keyboard child device will apprear as a
 .Xr uvhid 4
 device instead of a
@@ -93,10 +93,17 @@ device instead of a
 device. This option implies
 .Fl k .
 .It Fl m
-Attach Mouse HID child device. (This is the default behaviour)
+Attach Mouse HID child device.
 .It Fl M
-Attach Mouse as a General HID child device. This option impiles
+Attach Mouse as a Generic HID child device. This option impiles
 .Fl m .
+.It Fl s
+Strip the report ID byte from the hid report data for the Generic
+HID child device. This is needed if the hid application is using
+.Xr usbhid 3
+parser to parse the data read from the simulated
+.Xr uvhid 4
+interface.
 .It Fl v
 Output additional information for debugging purpose. Multiple
 .Fl v
@@ -106,10 +113,16 @@ verbosity. This option implies
 .Sh SEE ALSO
 .Xr usbhidaction 1 ,
 .Xr usb 3 ,
+.Xr usbhid 3 ,
 .Xr uhid 4 ,
 .Xr uvhid 4 ,
 .Xr vkbd 4 ,
 .Xr bthidd 8 ,
 .Xr moused 8
 .Sh AUTHORS
-.An Kai Wang Aq kaiw@FreeBSD.org
+The
+.Nm
+daemon was written by
+.An Kai Wang Aq kaiw@FreeBSD.org ,
+based on the work done by many others.
+
