--- a/trunk/uhidd/uhidd.conf.5
+++ b/trunk/uhidd/uhidd.conf.5
@@ -129,8 +129,66 @@ in the USB specification for a list of
 usage names.
 .El
 .Sh EXAMPLES
+.Bd -literal
+#
+# For all devices, attach mouse and consumer control driver but
+# do not attach keyboard and vhid driver. (say, keyboard is
+# handled by the kernel driver ukbd(4) instead). Provide a global
+# keymap which binds 4 multimedia keys found on most multimedia
+# USB keyboard.
+#
+default={
+	mouse_attach="YES"
+	kbd_attach="NO"
+	vhid_attach="NO"
+	cc_attach="YES"
+	cc_keymap={
+		Play/Pause="0x54"
+		Mute="0x60"
+		Volume_Increment="0x63"
+		Volume_Decrement="0x62"
+	}
+}
 
-
+#
+# Device specific config for Mircosoft Wireless Desktop 1000:
+# Bind additional multimedia keys found on this combo.
+#
+0x045e:0x009d={
+	cc_keymap={
+		Help="0x68"
+		Scan_Next_Track="0x5F"
+		Scan_Previous_Track="0x5A"
+		Play/Pause="0x54"
+		Mute="0x60"
+		Volume_Increment="0x63"
+		Volume_Decrement="0x62"
+		AL_Programmable_Button_Configuration="0x6F"
+		AL_Email_Reader="0x7F"
+		AL_Calculator="0x71"
+		AL_Logoff="0x72"
+		AL_Documents="0x64"
+		AL_Spell_Check="0x70"
+		AL_Image_Browser="0x7C"
+		AL_Audio_Browser="0x7A"
+		AC_New="0x6B"
+		AC_Open="0x6C"
+		AC_Close="0x6D"
+		AC_Save="0x7D"
+		AC_Print="0x79"
+		AC_Undo="0x69"
+		AC_Home="0x65"
+		AC_Back="0x66"
+		AC_Forward="0x67"
+		AC_Zoom_In="0x75"
+		AC_Zoom_Out="0x74"
+		AC_Redo/Repeat="0x6A"
+		AC_Reply="0x6E"
+		AC_Forward_Msg="0x76"
+		AC_Send="0x73"
+	}
+}
+.Ed
 .Sh FILES
 .Bl -tag -width /usr/local/etc/uhidd.conf -compact
 .It Pa /usr/local/etc/uhidd.conf
