--- a/trunk/uhidd/uhidd.conf.5
+++ b/trunk/uhidd/uhidd.conf.5
@@ -42,7 +42,7 @@ The configuration file consists of a list of options.
 options are assignemnts written in the form
 .Dq Ar name Ns Li = Ns Ar value .
 A option name can be a device identifier or a driver parameter.
-A value is either a quoted string or another list of sub options.
+A value is either a quoted string or a list of sub options.
 The syntax of a option with a list of options as value
 is:
 .Pp
@@ -115,7 +115,7 @@ the form
 .Dq Ar usage Ns Li = Ns Ar keycode
 and specify exact one key binding between a USB HID usage and a
 keycode. For example,
-.Em Mute Ns Li = Ns Dq Li Em 0x60
+.Em Mute Ns Li = Ns Dq Em 0x60
 will bind multimedia key
 .Em Mute
 to keycode 0x60. Normally, mapping usage to
@@ -211,7 +211,6 @@ These keycodes are most likely not used for English keyboard.
 some keyboards and can be reassigned if your keyboard doesn't have
 them.
 .El
-.Ed
 .Sh FILES
 .Bl -tag -width /usr/local/etc/uhidd.conf -compact
 .It Pa /usr/local/etc/uhidd.conf
