--- a/trunk/uhidd/uhidd.8
+++ b/trunk/uhidd/uhidd.8
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2009 Kai Wang
+.\" Copyright (c) 2009, 2010 Kai Wang
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
