Add reference to HID Usage Tables.

--- a/trunk/uhidd/uhidd.conf.5
+++ b/trunk/uhidd/uhidd.conf.5
@@ -220,3 +220,6 @@ the default name of the configuration file
 Some facts stated in this manual page might not be true.
 .Sh SEE ALSO
 .Xr uhidd 8
+.Pp
+HID Usage Tables:
+.Em http://www.usb.org/developers/devclass_docs/Hut1_11.pdf
