--- a/uhidd/uhidd.conf.5
+++ b/uhidd/uhidd.conf.5
@@ -192,10 +192,10 @@ default={
 .Sh FREEKEYS
 .Fx
 keyboard infrastructure support at most 127 keycodes. Most of the
-keycods have been assigned. Unassigned keycodes can be bound to
+keycodes have been assigned. Unassigned keycodes can be bound to
 multimedia keys without problem. Among those already assigned
 keycodes, rarely used ones can be reassigned to multimedia keys as
-well. The following is a list of keycods that can probably be
+well. The following is a list of keycodes that can probably be
 .Dq Li safely
 reassigned.
 .Bl -tag -width "Rarely used keycodes"
