Mention that the option -H has an argument in the manual page.
Reported by: Jan Beich

--- a/trunk/uhidd/uhidd.8
+++ b/trunk/uhidd/uhidd.8
@@ -116,7 +116,7 @@ Attach the Virtual Generic HID class driver.
 This option requires that
 .Xr cuse4bsd 4
 driver loaded as a kernel module.
-.It Fl H
+.It Fl H Ar devname
 Specify the name of the virtual HID device created by the
 virtual generic HID driver. The default name used for the device is
 .Dq uvhid .
