--- a/uhidd/uhidd.conf.5
+++ b/uhidd/uhidd.conf.5
@@ -83,6 +83,15 @@ daemon will detach the active kernel driver attached to
 the device before attaching itself. Otherwise the daemon
 will abort and let the kernel driver continue handling
 the device.
+.It Va forced_attach
+.Pq Vt bool
+If set to
+.Dq Li YES ,
+the
+.Nm uhidd
+daemon will attach the device interface even if there is an
+active kernel driver attached to the device, or if the daemon
+fails to detach the kernel driver.
 .It Va kbd_attach
 .Pq Vt bool
 If set to
