--- a/uhidd/uhidd.8
+++ b/uhidd/uhidd.8
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd March 6, 2010
+.Dd October 23, 2012
 .Dt UHIDD 8
 .Os
 .Sh NAME
@@ -33,7 +33,8 @@
 .Sh SYNOPSIS
 .Nm
 .Op Fl c Ar file
-.Op Fl DdhkmosuVv
+.Op Fl H Ar devname
+.Op Fl dDhkmosuUvV
 .Ar /dev/ugen%u.%u
 .Sh DESCRIPTION
 The
