--- a/uhidd/uhidd.conf.5
+++ b/uhidd/uhidd.conf.5
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2010 Kai Wang
+.\" Copyright (c) 2010, 2012 Kai Wang
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd March 3, 2010
+.Dd October 22, 2012
 .Dt UHIDD.CONF 5
 .Os
 .Sh NAME
